--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,7 +1,7 @@
 html {
   scroll-behavior: smooth;
   scroll-padding: 5rem;
-  background-color: rgb(244, 244, 244);
+  background-color: #c8b6ff;
   font-family: "Roboto", sans-serif;
 }
 
@@ -46,7 +46,7 @@ button:hover {
 
 button:active {
   letter-spacing: 3px;
-  background-color: hsl(261, 80%, 48%);
+  background-color: #5d18dc;
   color: hsl(0, 0%, 100%);
   box-shadow: rgb(93, 24, 220) 0px 0px 0px 0px;
   transform: translateY(10px);
@@ -59,10 +59,10 @@ button:active {
   align-items: center;
   border-radius: 100%;
   justify-content: center;
-  width: 400px;
-  height: 400px;
+  width: 350px;
+  height: 350px;
   background-color: white;
   margin-top: 8%;
   margin-bottom: 3%;
-  box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
+  box-shadow: rgba(93, 24, 220, 0.3607843137) 0 0 80px;
 }/*# sourceMappingURL=style.css.map */
